--- a/README.org
+++ b/README.org
@@ -53,7 +53,8 @@ To create a new virtual environment in a directory named .venv, run:
 
 #+NAME: shell
 #+BEGIN_SRC shell
-python3 -m venv .venv
+cd
+  python3 -m venv .venv
 #+END_SRC
 
     To activate this virtual environment (which modifies the PATH environment
@@ -85,11 +86,11 @@ python3 -m venv .venv
     mkdir Documents
 #+END_SRC
 
-Put motionDetect.py, servoDriver.py and oscServoMotionDetect.scd to Documents folder
+Put =motionDetect.py=, =servoDriver.py= and =oscServoMotionDetect.scd= to Documents folder
 
-Put start_tmux.sh file to Home directory
+Put =start_tmux.sh= file to Home directory
 
-Put BellPat.sc to SuperCollider Extensions folder
+Put =BellPat.sc= to SuperCollider Extensions folder
 
 Make "start_tmux.sh" file executable:
 
